--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <nav>
