--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         </div>
     </nav>
     <header>
+        <div class="header-overlay"></div>
+        <div class="header-background"></div>
         <div class="header-content">
             <h1>MALANG:THE PARIS OF EAST JAVA IS WAITING YOU</h1>
             <div class="header-button">
